# PoseEstimator

./: .gitignore  .gitmodules  PoseController.py  README.md  __init__.py  block_seibersdorf.ply  check_consistency.py  conda_env.yaml  direct_transform.txt  finaltransform.txt  inlier_counts.txt  main.py  main_image.py  main_realsense.py  main_seibersdorf.py  main_synthetic_video.py  pose_bop_format.json  pose_est_from_homogenous.py  pose_est_main_single.py  pyproject.toml  realtime.py  realtime_synthetic.py  requirements.txt  rs_yolo.py  setup.py  standard_camera_transform.txt
EstimHelpers/: HelpersRealtime.py  PoseEstimator.py  RealSenseClass.py  TheRetector.py  detection_utils.py  registration_utils.py  template_creation.py
PoseEstimator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
data/: scene_camera.json  scene_gt.json
data/lego_views/: depth_01.npy  depth_02.npy  depth_03.npy  depth_04.npy  depth_05.npy  depth_06.npy  depth_07.npy  depth_08.npy  depth_09.npy  depth_10.npy  depth_11.npy  depth_12.npy  depth_13.npy  depth_14.npy  depth_15.npy  depth_16.npy  depth_17.npy  depth_18.npy  depth_19.npy  depth_20.npy  depth_21.npy  depth_22.npy  depth_23.npy  depth_24.npy  depth_25.npy  pcd_00.ply  pcd_01.ply  pcd_02.ply  pcd_03.ply  pcd_04.ply  pcd_05.ply  pcd_07.ply  pcd_09.ply  pcd_10.ply  pcd_11.ply  pcd_12.ply  pcd_13.ply  pcd_14.ply  pcd_15.ply  pcd_16.ply  (+9 more)
datageneration/Blenderproc/: README.md  config.json  general_json2yolo_bop.py  rendering_tless.py  video_rendering.py
detection/: README.md  dataset.yaml  detection.py  mirror.py  predict.py  testrun.py  train.py
detection/Blenderproc/: config.json  general_json2yolo_bop.py  rendering_tless.py
detection/YOLO/: train.py
registration/my_examples/: create_pcd_cad.py  icosahedron.py  inlier_counts.txt  registration_final.py
registration/ws/: LegoBlock_variant.ply  create_pcd.py  icosahedron.py  multiple_views.py  orientation_test_tripod.py  (+3 more)
src/: main_realsense.py
(+19 files in other folders)
